--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,25 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: black;
+    text-align: center;
 }
 
 h1,
 .ball {
     color: white;
+}
+
+.ball {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: rgb(49, 99, 83);
+    margin-inline: auto;
+    cursor: pointer;
+
+    display: grid;
+    place-items: center;
 }
