--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ h1,
     cursor: pointer;
     font-size: 22px;
     font-weight: bold;
+    transition: 1s;
 
     display: grid;
     place-items: center;
