--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,7 @@ body {
     text-align: center;
 }
 
-h1,
-.ball {
+h1 {
     color: white;
 }
 
@@ -16,8 +15,7 @@ h1,
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-color: rgb(49, 99, 83);
-    margin-inline: auto;
+    margin: 20px auto;
     cursor: pointer;
     font-size: 22px;
     font-weight: bold;
@@ -25,4 +23,12 @@ h1,
 
     display: grid;
     place-items: center;
+}
+
+.first-ball {
+    background-color: rgb(49, 99, 83);
+}
+
+.sec-ball {
+    background-color: rgb(122, 84, 157);
 }
